# fsdl_deforestation_detection

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  lint_python.yml  pre-commit.yml
docker/: README.md
fsdl_deforestation_detection/: __init__.py  __main__.py
fsdl_deforestation_detection/dashboard/: app.py  dashboard_utils.py  layouts.py  requirements.txt  session_state.py  style.css
fsdl_deforestation_detection/data/: 01_get_data.ipynb
fsdl_deforestation_detection/data/bigquery_schemas/: planet_amazon_labels.json  playground_uploads.json
fsdl_deforestation_detection/deployment/: README.md  app.py
fsdl_deforestation_detection/experimental/: 03_tf_modeling_experiments.ipynb  04_dashboard_experiments.ipynb  FSDL_Final_Model.ipynb
fsdl_deforestation_detection/modeling/: fsdl_final_model.py  model_utils.py  models.py  train.py
fsdl_deforestration_detection/: __init__.py  __main__.py
fsdl_deforestration_detection/dashboard/: app.py  dashboard_utils.py  layouts.py  session_state.py
fsdl_deforestration_detection/data/: 01_get_data.ipynb  data_utils.py
fsdl_deforestration_detection/data/bigquery_schemas/: wids_oil_palm_labels.json
fsdl_deforestration_detection/deployment/: README.md
fsdl_deforestration_detection/experimental/: 01_eda_amazon_planet.ipynb  02_eda_amazon_planet.ipynb  03_tf_modeling_experiments.ipynb  04_dashboard_experiments.ipynb
fsdl_deforestration_detection/modeling/: models.py  train.py
tests/test_example/: test_hello.py
